# nix-wsl

./: .gitattributes  .gitignore  README.md  flake.nix
.config/nvim/: init.lua
.obsidian/: workspace.json
examples/python-toml/: .gitignore  tic_tac_toe.toml
home-manager/: bash.nix  home.nix  kitty.nix  nvim.nix  tmux.nix
home-manager/my-nixvim-module/: default.nix
home-manager/nixvim/: autocommands.nix  default.nix  keymappings.nix  options.nix
home-manager/nixvim/plugins/: default.nix
home-manager/nvim/: default.nix
home-manager2/: flake.nix  home.nix
home-manager2/nvim/: coc-settings.json  init.lua
home-manager2/nvim/lsp/: clangd.lua
home-manager2/nvim/lua/: clipboard.lua
home-manager3/: flake.nix  home.nix
home-manager3/lsp-examples/bash/: test1.bash
home-manager3/lsp-examples/c/simple/: README.md  meson.build  simple.c
home-manager3/lsp-examples/c/simple/subdir/: foo.c
home-manager3/nvim/: init.lua
home-manager3/nvim-new/: init.lua  nvim-pack-lock.json  rocks.toml
home-manager3/nvim-new/lsp/: bashls.lua  clangd.lua  pylsp.lua
home-manager3/nvim-new/lua/: autocmds.lua  command.lua  configs.lua  keymaps.lua  lsp.lua  plugins.lua  statusline.lua
home-manager3/nvim/lsp/: nil.lua  pylsp.lua
nixos/: .wslconfig  configuration.nix
nixos/NixOS-25.05/: chatgpt5_flake.nix  configuration.nix  flake.nix  utils.nix
nixos/basic/: configuration.nix  flake.nix
nixos/vm-enabled/: configuration.nix  flake.nix
scripts/: boot_nix_wsl.ps1
vms/: default.nix  networking.nix
vms/Example/: default.nix
vms/Minecraft/: default.nix
(+61 files in other folders)
